--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -6,7 +6,7 @@
     align-items: center;
     .login-container {
         background-color: white;
-        height: 80%;
+        height: 600px;
         width: 400px;
         border-radius: 10px;
         .login-content {
