design home page

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,1 +1,8 @@
 @import "../styles/common.scss";
+.main-container {
+    // background-color: red;
+    // width: 100vw;
+    // .content-container {
+    //     width: 100%;
+    // }
+}
