--- a/src/components/CustomScrollbars.scss
+++ b/src/components/CustomScrollbars.scss
@@ -2,12 +2,12 @@
 
 .custom-scrollbar {
   .thumb-horizontal {
-    background-color: rgba($bg-scrollbar, 0.4);
-    box-shadow: inset 1px 1px 0 rgba($bg-scrollbar, 0.10), inset 0 -1px 0 rgba($bg-scrollbar, 0.07);
+    background-color: rgba($bg-scrollbar, 0.7);
+    box-shadow: inset 1px 1px 0 rgba($bg-scrollbar, 0.1), inset 0 -1px 0 rgba($bg-scrollbar, 0.07);
 
     &:hover {
-      background-color: rgba($bg-scrollbar, 0.8);
-      box-shadow: inset 1px 1px 1px rgba($bg-scrollbar, 0.50);
+      background-color: rgba($bg-scrollbar, 1);
+      box-shadow: inset 1px 1px 1px rgba($bg-scrollbar, 0.5);
     }
 
     &:active {
@@ -17,12 +17,12 @@
   }
 
   .thumb-vertical {
-    background-color: rgba($bg-scrollbar, 0.4);
-    box-shadow: inset 1px 1px 0 rgba($bg-scrollbar, 0.10), inset 0 -1px 0 rgba($bg-scrollbar, 0.07);
+    background-color: rgba($bg-scrollbar, 0.7);
+    box-shadow: inset 1px 1px 0 rgba($bg-scrollbar, 0.1), inset 0 -1px 0 rgba($bg-scrollbar, 0.07);
 
     &:hover {
-      background-color: rgba($bg-scrollbar, 0.8);
-      box-shadow: inset 1px 1px 1px rgba($bg-scrollbar, 0.50);
+      background-color: rgba($bg-scrollbar, 1);
+      box-shadow: inset 1px 1px 1px rgba($bg-scrollbar, 0.5);
     }
 
     &:active {
@@ -31,13 +31,13 @@
     }
   }
 
-
   &:hover {
-
-    > .track-horizontal, > .track-vertical {
+    > .track-horizontal,
+    > .track-vertical {
       opacity: 1 !important;
 
-      > .thumb-horizontal, > .thumb-vertical {
+      > .thumb-horizontal,
+      > .thumb-vertical {
         opacity: 1;
       }
     }
@@ -47,8 +47,9 @@
     right: 0;
     bottom: 0;
     left: 0;
-    height: 5px !important;
-    &:hover, &:active {
+    height: 10px !important;
+    &:hover,
+    &:active {
       height: 10px !important;
     }
   }
@@ -57,8 +58,9 @@
     right: 0;
     bottom: 0;
     top: 0;
-    width: 5px !important;
-    &:hover, &:active {
+    width: 10px !important;
+    &:hover,
+    &:active {
       width: 10px !important;
     }
   }
@@ -68,7 +70,6 @@
     border-radius: 10px;
     background-clip: padding-box;
     min-width: 0px;
-
   }
 
   .thumb-vertical {
@@ -77,5 +78,4 @@
     background-clip: padding-box;
     min-height: 0px;
   }
-
 }
