--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,12 +1,11 @@
 .home-header-container {
-    height: 60px;
     width: 100%;
     .home-header-content {
         box-sizing: border-box;
-        padding: 0 40px;
+        padding: 0 200px;
 
         width: 100%;
-        height: 100%;
+        height: 80px;
         display: flex;
         .header-content-left {
             flex: 1;
@@ -22,7 +21,7 @@
             }
             i {
                 position: absolute;
-                right: 305px;
+                left: 70px;
                 font-size: 25px;
                 color: gray;
                 cursor: pointer;
@@ -57,15 +56,29 @@
             }
             .language-vi {
                 cursor: pointer;
+                opacity: 0.5;
                 margin-right: 10px;
                 &.active {
+                    font-weight: 600;
+                    opacity: 1;
                     color: #49bce2;
+                }
+                &:hover {
+                    font-weight: 600;
+                    opacity: 1;
                 }
             }
             .language-en {
+                opacity: 0.5;
                 cursor: pointer;
                 &.active {
+                    font-weight: 600;
+                    opacity: 1;
                     color: #49bce2;
+                }
+                &:hover {
+                    font-weight: 600;
+                    opacity: 1;
                 }
             }
         }
@@ -90,6 +103,7 @@
             font-size: 30px;
             color: #fff;
             text-shadow: 1px 1px 1px #333;
+            text-transform: uppercase;
         }
         .title-second {
             text-align: center;
@@ -97,6 +111,7 @@
             color: #fff;
             font-weight: 600;
             text-shadow: 1px 1px 1px #333;
+            text-transform: uppercase;
         }
         .search {
             padding: 10px;
@@ -119,6 +134,7 @@
     }
     .banner-bot {
         height: 30%;
+        padding-bottom: 20px;
         display: flex;
         justify-content: center;
         align-items: flex-end;
