--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,12 +1,15 @@
 .home-header-container {
     width: 100%;
     .home-header-content {
+        background-color: white;
         box-sizing: border-box;
         padding: 0 200px;
-
         width: 100%;
         height: 80px;
         display: flex;
+        position: fixed;
+        top: 0;
+        z-index: 10000000000000000;
         .header-content-left {
             flex: 1;
             display: flex;
