--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -11,11 +11,13 @@
         border-radius: 10px;
         .login-content {
             padding: 10px;
+            //margin: 40px 0;
             .login-text {
                 text-align: center;
                 font-size: 28px;
                 font-weight: 600px;
                 padding-top: 10px;
+                padding-bottom: 60px;
             }
             .login-input {
                 margin: 10px 0;
@@ -38,6 +40,7 @@
                 }
             }
             .btn-login {
+                box-sizing: border-box;
                 margin-top: 20px;
                 float: right;
                 outline: none;
@@ -45,6 +48,14 @@
                 padding: 4px 25px;
                 background-color: #00dcffc4;
                 border-radius: 10px;
+                &:focus {
+                    background-color: #00d9ff;
+                    box-shadow: 0 0 0px 2px rgba(0, 0, 0, 0.18);
+                }
+                &:hover {
+                    background-color: #00d9ff;
+                    box-shadow: 0 0 0px 2px rgba(0, 0, 0, 0.18);
+                }
             }
             .login-with {
                 margin-top: 20px;
