--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -21,6 +21,9 @@
         }
     }
     .header-languages {
+        .text-welcome {
+            margin-right: 10px;
+        }
         .language-en {
             margin-right: 20px;
             margin-left: 15px;
@@ -28,7 +31,7 @@
             &.active {
                 font-weight: 600;
                 opacity: 1;
-                color: #49bce2;
+                color: #ff1e00;
             }
             &:hover {
                 font-weight: 600;
@@ -40,7 +43,7 @@
             &.active {
                 font-weight: 600;
                 opacity: 1;
-                color: #49bce2;
+                color: #ff1e00;
             }
             &:hover {
                 font-weight: 600;
