--- a/src/containers/System/Admin/UserRedux.scss
+++ b/src/containers/System/Admin/UserRedux.scss
@@ -11,7 +11,7 @@
 }
 .preview-img {
     cursor: pointer;
-    border: 1px solid red;
+    border: 1px solid rgba(156, 156, 156, 0.3);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
