design detail doctor

--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -69,6 +69,7 @@
         .section-body {
             .section-customize {
                 margin-right: 10px;
+                cursor: pointer;
                 .outer-border {
                     display: flex;
                     justify-content: center;
