--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -15,6 +15,15 @@
             padding-left: 20px;
         }
     }
+    .book-doctor {
+        padding: 0 280px;
+        .content-left {
+            width: 50%;
+        }
+        .content-right {
+            width: 50%;
+        }
+    }
     .info-doctor {
         background-color: #f9f9f9;
         padding: 10px 280px;
