create patient api

--- a/src/containers/Patient/Doctor/Modal/BookingModal.scss
+++ b/src/containers/Patient/Doctor/Modal/BookingModal.scss
@@ -1,6 +1,6 @@
 .booking-modal-container {
     .booking-modal-content {
-        height: 500px;
+        padding: 0 10px;
         display: flex;
         flex-direction: column;
         .booking-modal-header {
